--- a/bid-service/bid-service-command-web/src/main/resources/application.yml
+++ b/bid-service/bid-service-command-web/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   application:
     name: bid-command
-  sleuth:
-    sampler:
-      percentage: 1.0
-    web:
-      skipPattern: (^cleanup.*)
-  zipkin:
-    base-url: http://${DOCKER_HOST_IP}:9411
+#  sleuth:
+#    sampler:
+#      percentage: 1.0
+#    web:
+#      skipPattern: (^cleanup.*)
+#  zipkin:
+#    base-url: http://${DOCKER_HOST_IP}:9411
 
 server:
   port: ${PORT:8081}
